[tool.poetry]
name = "finddup"
version = "0.1.0"
description = ""
authors = ["Andrés Delfino <adelfino@gmail.com>"]
readme = "README.md"
packages = [{include = "finddup"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
finddup_cli = "finddup.cli:main"
finddup_gui = "finddup.gui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
